# excavator

./: .gitignore  AUDIO_IMPLEMENTATION_PLAN.md  CLOUD_DEPLOYMENT.md  EXAMPLES.md  README.md  ROS2_IMPLEMENTATION_SUMMARY.md  ROS2_INTEGRATION.md  ROS2_QUICK_START.md  STATUS.md  go.mod  go.sum
cmd/excavator/: main.go
cmd/signaling/: main.go
pkg/ros2/: client.go  pubsub.go  types.go
ros2_ws/src/excavator_bridge/: CMakeLists.txt  package.xml
ros2_ws/src/excavator_bridge/src/: ros_gst_bridge.cpp
scripts/: deploy-to-cloud.sh  kill-all.sh  ros2-image-bridge.sh  ros2_h264_camera_publisher.py  ros2_h264_stdout_bridge.py  ros2_image_bridge.py  ros2_isaac_h264_publisher.py  setup-network.sh  start-all.sh  start-excavator-bridge.sh  start-excavator.sh  start-isaac-h264-publisher.sh  start-ros2-h264-camera.sh  start-signaling.sh  start-web-server.sh  test-ros2-control.sh  test-ros2.sh  test-system.sh
scripts/shm_solution/: README.md  audio_player.py  audio_streamer.py  kill-all.sh  ros_control_stdin.py  ros_telemetry_stdout.py  ros_to_shm.py  shm_to_h264_publisher.py  shm_to_stdout.py  start_all.sh  start_ros_to_shm.sh  start_shm_to_h264.sh
web/: controller.html
